--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=team2project
-server.port=8086
+server.port=8085
 
 # ? Remote PostgreSQL connection
 spring.datasource.url=jdbc:postgresql://168.220.248.40:5433/team_2_db?currentSchema=public&stringtype=unspecified&TimeZone=Asia/Kolkata
@@ -10,7 +10,8 @@ spring.datasource.password=team_2_pass
 # ? JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Let Hibernate pick the dialect automatically; can be overridden per env
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
