feat: update Jenkinsfile for Team 2 with unique ports and improved Docker config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=team2project
 server.port=8085
 
-# ? Remote PostgreSQL connection
+# ? Remote PostgreSQL connection (will be overridden by environment variables in Docker)
 spring.datasource.url=jdbc:postgresql://168.220.248.40:5433/team_2_db?currentSchema=public&stringtype=unspecified&TimeZone=Asia/Kolkata
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=team_2_user
