--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,25 @@
+# Default Application Configuration
+# Environment-specific configs are in application-{profile}.properties
+
 spring.application.name=team2project
 server.port=8085
 
-# ? Remote PostgreSQL connection (will be overridden by environment variables in Docker)
-spring.datasource.url=jdbc:postgresql://168.220.248.40:5433/team_2_db?currentSchema=public&stringtype=unspecified&TimeZone=Asia/Kolkata
+# Default database configuration (can be overridden by environment variables)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/team2project}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=team_2_user
-spring.datasource.password=team_2_pass
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:team2_user}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:team2_pass}
 
-# ? JPA / Hibernate settings
+# Default JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# Let Hibernate pick the dialect automatically; can be overridden per env
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-# ? Logging
+# Default Logging
 logging.level.org.springframework=INFO
-logging.level.com.test.db=DEBUG
+logging.level.com.demo.deutschebank.team2project=INFO
+
+# Actuator configuration
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
